<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00.000"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCurrentText"
        app:layout_constraintStart_toStartOf="@+id/tvCurrentText"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentText" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="96dp"
        android:onClick="onClickStartStop"
        android:text="@string/strStart"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

    <TextView
        android:id="@+id/tvCurrentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/strCurTime"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAVGText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/strAVGTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAVG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00.000"
        app:layout_constraintEnd_toEndOf="@+id/tvAVGText"
        app:layout_constraintStart_toStartOf="@+id/tvAVGText"
        app:layout_constraintTop_toBottomOf="@+id/tvAVGText" />

    <Button
        android:id="@+id/btInstruction"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:onClick="onClickInstruction"
        android:text="@string/strInstruction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStart" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="97dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/strPop"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/btStart"
        app:layout_constraintEnd_toStartOf="@+id/tvCount"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="@+id/tvAVGText"
        app:layout_constraintTop_toBottomOf="@+id/tvAVG"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAVG" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:onClick="onClickbtClear"
        android:text="@string/strClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStart" />

</androidx.constraintlayout.widget.ConstraintLayout>